manifests/kruize-mcp-server-minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kruize-mcp-server
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kruize-mcp-server
  template:
    metadata:
      labels:
        app: kruize-mcp-server
    spec:
      containers:
        - name: kruize-mcp-server
          # Update this to your image name and tag
          image: quay.io/shbirada/kruize-mcp-server:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
              name: http
          resources:
            requests:
              memory: "250Mi"
              cpu: "0.5"
            limits:
              memory: "250Mi"
              cpu: "0.5"
---
apiVersion: v1
kind: Service
metadata:
  name: kruize-mcp-server-service
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: kruize-mcp-server
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      nodePort: 30082
